# bernd

./: Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
bernd/: constants.py  main.py  translate.py
bernd/database/: migrations.py  models.py
bernd/discord/: bot.py
migrations/: 001_init.py
